# aboutme

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
dockerfiles/: Dockerfile.alpine  Dockerfile.fedora  Dockerfile.ubuntu
docs/: 404.html  index.html
docs/assets/: 404.html-BRYGOh3S.js  404.html-CccBkCRj.js  404.html-CriNmetN.js  app-BGyRFrgn.js  app-CT59wDvj.js  app-y-uPBKGN.js  index.html-B86c-vfu.js  index.html-CHqaEAsK.js  index.html-n9d9xGsf.js  style-Ci-zrbYU.css
documentation/: 404.html  index.html
documentation/assets/: app-CT59wDvj.js  index.html-B86c-vfu.js
makefiles/: Makefile.freebsd  Makefile.linux  Makefile.windows.clang  Makefile.windows.vs
resources/: aboutme.rc  aboutme.res
src/: main_freebsd.cpp  main_linux.cpp  main_windows.cpp
src/common/: common.cppm  environment_variables.cpp  system_clock.cpp
src/core/: core.cppm  main.cpp
src/core/freebsd/: cpu.cpp  hard_disks.cpp  memory.cpp  operating_system.cpp  processes.cpp  services.cpp  usb.cpp
src/core/linux/: cpu.cpp  gpu.cpp  hard_disks.cpp  memory.cpp  operating_system.cpp  processes.cpp  services.cpp  startup.cpp  usb.cpp
src/core/windows/: battery.cpp  bluetooth.cpp  cpu.cpp  features.cpp  gpu.cpp  hard_disks.cpp  installed.cpp  memory.cpp  network.cpp  operating_system.cpp  processes.cpp  restore.cpp  scheduled_tasks.cpp  services.cpp  shared.cpp  startup.cpp  tasks.cpp  trash.cpp  usb.cpp  wifi.cpp
src/i18n/english/: all.cppm  freebsd.cppm  linux.cppm  windows.cppm
src/i18n/portuguese/: all.cppm  freebsd.cppm  linux.cppm  windows.cppm
tests/: build-all.cpp
